<resources>
    <string name="app_name">EasyCoachApp</string>
    <string name="txt_novasessao"><u>NOVA SESSÃO</u></string>
    <string name="txt_coachee">Coachee</string>
    <string name="txt_especialidade">Especialidade</string>
    <string name="txt_titulo">Título</string>
    <string name="txt_datasessao">Data da Sessão</string>
    <string name="txt_numdasessao">Num. da Sessao</string>
    <string name="txt_descricao">Descrição</string>
    <string name="txt_enviarconvite">ENVIAR CONVITE</string>
    <string name="txt_cobrartx">         COBRAR TAXA DE CANCELAMENTO?</string>
    <string name="schedule"><u>AGENDA</u></string>
    <string name="next_sessions">Sessões neste dia:</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="sign_in">ENTRAR</string>
    <string name="sign_up">Novo por aqui? Cadastre-se</string>
    <string name="login_with">Entrar com:</string>
    <string name="app_logo">Logo do aplicativo</string>
    <string name="session_link">Link da sessão:</string>
</resources>
