<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.session.register.NewSessionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvNewSession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/txt_novasessao"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TableLayout
                android:id="@+id/tbNewSession1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@id/tvNewSession">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">
                    <TextView
                        android:id="@+id/tvSessionScheduledDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:text="@string/txt_datasessao"
                        android:textColor="@color/fixText_blue"
                         />

                    <TextView
                        android:id="@+id/tvSessionNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/txt_numdasessao"
                        android:textColor="@color/fixText_blue"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">
                    <EditText
                        android:id="@+id/etSessionScheduledDate"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:background="@drawable/bg_edittext"
                        android:cursorVisible="false"
                        android:inputType="date" />

                    <ListView
                        android:id="@+id/lvSessionNumber"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:layout_marginTop="4dp"
                        android:layout_marginStart="4dp"
                        android:background="@drawable/bg_edittext" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">
                    <TextView
                        android:id="@+id/tvCoachee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/txt_coachee"
                        android:textColor="@color/fixText_blue" />

                    <TextView
                        android:id="@+id/tvSpeciality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/txt_especialidade"
                        android:textColor="@color/fixText_blue"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <Spinner
                        android:id="@+id/spCoachee"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:background="@drawable/bg_spinnertext"/>

                    <Spinner
                        android:id="@+id/spSpecialities"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:layout_marginTop="4dp"
                        android:layout_marginStart="4dp"
                        android:background="@drawable/bg_spinnertext"
                        app:layout_constraintEnd_toStartOf="@+id/guidelineright"
                        tools:layout_editor_absoluteY="188dp" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/tvSessionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/txt_titulo"
                android:textColor="@color/fixText_blue"
                app:layout_constraintTop_toBottomOf="@id/tbNewSession1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                android:id="@+id/etSessionTitle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edittext"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@id/tvSessionTitle"/>

            <TextView
                android:id="@+id/tvSessionDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/txt_descricao"
                android:textColor="@color/fixText_blue"
                app:layout_constraintTop_toBottomOf="@id/etSessionTitle" />

            <EditText
                android:id="@+id/etSessionDescription"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edittext"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@id/tvSessionDescription" />

            <EditText
                android:id="@+id/etSessionInviteUrl"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_edittext"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@id/etSessionDescription"/>

            <CheckBox
                android:id="@+id/cbHasCancellationFee"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/txt_cobrartx"
                android:textAlignment="center"
                android:textColor="@color/bold_blue"
                app:layout_constraintTop_toBottomOf="@id/etSessionInviteUrl" />

            <Button
                android:id="@+id/btSendInvite"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/btn_convite"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/txt_enviarconvite"
                app:layout_constraintTop_toBottomOf="@id/cbHasCancellationFee" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>